# R-Eats-UCR-Food-Reccomendation-Service

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  main
.github/workflows/: main.yml
headers/: buffetRestaurant.hpp  chronicTacos.hpp  coffeeBean.hpp  dietaryMenu.hpp  eta.hpp  foodOptions.hpp  foodSelector.hpp  habit.hpp  halalShack.hpp  hibachi.hpp  learnMore.hpp  menu.hpp  menuItem.hpp  pandaExpress.hpp  place.hpp  recommendation.hpp  remove.hpp  restaurant.hpp  restaurants.hpp  starbucks.hpp  subway.hpp  vRestaurants.hpp
src/: QRCodeModule.cpp  buffetRestaurants.cpp  main.cpp  recommendation.cpp  restaurant.cpp  vRestaurants.cpp
tests/: test.cpp  testAlgorithm.cpp  testConstructors.cpp  testDietaryMenu.cpp  testEta.cpp  testMenu.cpp  testQRCode.cpp  testQRCodeVRes.cpp  testRemove.cpp
